<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/scrollView"
             android:layout_gravity="center_horizontal">
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/clientResumeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textFIO"
                android:hint="@string/name"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textBirthday"
                android:hint="@string/birthday"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textSex"
                android:hint="@string/sex"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textPosition"
                android:hint="@string/position"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textSalary"
                android:hint="@string/salary"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textPhone"
                android:hint="@string/phone"
                android:autoLink="phone"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textEmail"
                android:hint="@string/email"
                android:autoLink="email"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editReply"
                android:hint="@string/hint_reply"
                android:minLines="5"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_reply"
                android:id="@+id/buttonSendReply"/>
    </LinearLayout>
</ScrollView>